use position static to fix ie11 bug not showing main article

--- a/src/scss/components/_themed-panel.scss
+++ b/src/scss/components/_themed-panel.scss
@@ -33,7 +33,7 @@ $themed-panel-overlay: linear-gradient(to bottom, transparent, #000);
 
     @include media(lg) {
       padding-top: 0;
-      position: initial;
+      position: static;
     }
 
     &:before {
@@ -57,7 +57,7 @@ $themed-panel-overlay: linear-gradient(to bottom, transparent, #000);
 
   @include media(sm) {
     padding-top: 0;
-    position: initial;
+    position: static;
   }
 
   &:before {
